--- a/JsonExample/JsonExample.csproj
+++ b/JsonExample/JsonExample.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{159E1DD2-C9BD-43CF-8B58-3754CF7DD18D}</ProjectGuid>
+    <ProjectGuid>{627DE4AA-8980-4389-B082-EEB4D9F1F8FC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SqlTableRelations</RootNamespace>
-    <AssemblyName>SqlTableRelations</AssemblyName>
+    <RootNamespace>JsonExample</RootNamespace>
+    <AssemblyName>JsonExample</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BaseConnectionLibrary, Version=1.0.0.3, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\BaseConnectionLibrary.1.0.3\lib\net461\BaseConnectionLibrary.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="ListViewJsonExampleForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ListViewJsonExampleForm.designer.cs">
+      <DependentUpon>ListViewJsonExampleForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ListViewJsonExampleForm.resx">
+      <DependentUpon>ListViewJsonExampleForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -69,7 +66,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="packages.config" />
+    <None Include="applications.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -85,9 +84,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SqlServerOperations\SqlServerOperations.csproj">
-      <Project>{315f1d83-7537-495c-9217-3d997373df09}</Project>
-      <Name>SqlServerOperations</Name>
+    <ProjectReference Include="..\JsonLibrary\JsonLibrary.csproj">
+      <Project>{c8b5f30b-4407-475b-84b4-dfaa942bf887}</Project>
+      <Name>JsonLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LanguageExtensions\LanguageExtensions.csproj">
+      <Project>{677D140A-C1A5-4E9B-9DF3-90B11064FA21}</Project>
+      <Name>LanguageExtensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WindowFormsControls\WindowFormsControls.csproj">
+      <Project>{2ec148cd-7c11-4c39-891f-82b836efe18a}</Project>
+      <Name>WindowFormsControls</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
