--- a/WindowFormsControls/WindowFormsControls.csproj
+++ b/WindowFormsControls/WindowFormsControls.csproj
@@ -69,7 +69,7 @@
     <None Include="Resources\UpArrow.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Information.txt" />
+    <None Include="readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
