--- a/SqlServerOperations/SqlServerOperations.csproj
+++ b/SqlServerOperations/SqlServerOperations.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Classes\ServerTableItem.cs" />
     <Compile Include="SqlInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Classes\Suppliers.cs" />
+    <Compile Include="Classes\Supplier.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
