--- a/BasicListViewDetailViewExample/BasicListViewDetailViewExample.csproj
+++ b/BasicListViewDetailViewExample/BasicListViewDetailViewExample.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Dialogs.cs" />
+    <Compile Include="Classes\Extensions.cs" />
     <Compile Include="ContactForm.cs">
       <SubType>Form</SubType>
     </Compile>
