Added data script

--- a/NorthWindContactsCodeFirst/NorthWindContactsCodeFirst.csproj
+++ b/NorthWindContactsCodeFirst/NorthWindContactsCodeFirst.csproj
@@ -161,5 +161,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="DataScripts\Script.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
